--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "ng serve",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
+    "pree2e": "webdriver-manager update --gecko false",
     "e2e": "protractor"
   },
   "private": true,
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
+    "ts-md5": "^1.2.0",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
